@@ -1,7 +1,7 @@
 package com.osimatic.android_helpers;
 
+import java.io.UnsupportedEncodingException;
 import java.net.URLEncoder;
-import java.nio.charset.StandardCharsets;
 import java.util.HashMap;
 import java.util.Set;
 
@@ -13,8 +13,12 @@ public class URL {
 		Set<String> set = data.keySet();
 		for (String aSet : set) {
 			key = aSet;
-			String value = data.get(key);
-			dataStr += "&" + URLEncoder.encode(key, StandardCharsets.UTF_8) + "=" + URLEncoder.encode(null != value ? value : "", StandardCharsets.UTF_8);
+			try {
+				String value = data.get(key);
+				dataStr += "&" + URLEncoder.encode(key, "UTF-8") + "=" + URLEncoder.encode(null != value ? value : "", "UTF-8");
+			} catch (UnsupportedEncodingException e) {
+				e.printStackTrace();
+			}
 		}
 		return dataStr;
 	}
